# ai-crypto-monitor

./: .gitignore  MIGRATION_GUIDE.md  README.md  STRUCTURE.md  crypto-agent.py  crypto_agent.py  crypto_logger.py  main.py  pyproject.toml  requirements.txt  run.py  trend_analyzer.py
scripts/: daily_run.py  weekly_report.py
src/crypto_monitor/: __init__.py
src/crypto_monitor/agents/: __init__.py  daily_agent.py  weekly_agent.py
src/crypto_monitor/api/: __init__.py  coingecko.py
src/crypto_monitor/models/: __init__.py  schemas.py
src/crypto_monitor/storage/: __init__.py  sheets_logger.py
src/crypto_monitor/utils/: __init__.py  config.py
