[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-monitor"
version = "0.1.0"
description = "AI-powered cryptocurrency monitoring and analysis"
authors = [
    {name = "zautt"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.1",
    "openai>=1.0.0",
    "gspread>=5.11.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
crypto-daily = "crypto_monitor.scripts.daily_run:main"
crypto-weekly = "crypto_monitor.scripts.weekly_report:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylance]
extraPaths = ["src"]

[tool.basedpyright]
extraPaths = ["src"]
